# zeal

./: .dockerignore  .env.auth.example  .env.embedding.example  .env.example  .env.local.example  .env.production.example  .env.supabase.example  .env.timescaledb.example  .gitignore  .prettierignore  .prettierrc  AUTH_INTEGRATION_GUIDE.md  CONTRIBUTING.md  DEV_SETUP.md  Dockerfile  MCP_PLAYWRIGHT_SETUP.md  README.md  SDK_AUTH_IMPLEMENTATION.md  SDK_TOKEN_GENERATION_GUIDE.md  analyze_templates.py  auth-policies.example.yaml  auth-policies.yaml  claude-desktop-config-example.json  clear_storage.js  crdt-deletion-fix.md  docker-compose-local.sh  docker-compose-prod.sh  docker-compose.ai.yml  docker-compose.dev.yml  docker-compose.microservices.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.timescaledb.yml  docker-compose.yml  dynamicNodeMetadata.js  embed-presence-isolation.md  fix-categories-search.md  fix-category-subcategory-search.md  fix-local-deployment.md  fix-search-api-calls.md  (+20 more)
ai-integrations/: IMPLEMENTATION_PLAN.md  README.md  setup-ai.sh
app/: globals.css  layout.tsx  page.tsx  page.tsx.bak
components/: AudioPlayer.tsx  AudioStreamDisplay.tsx  CRDTDiagnostics.tsx  CRDTFeatureIndicator.tsx  CodeEditor.tsx  CollaborativeCursors.tsx  CollaborativeToggle.tsx  CollapsedGroupPortHandler.tsx  Configuration.tsx  ConfigurationToast.tsx  ConnectionLine.tsx  (+60 more)
crdt-server/: Cargo.toml  Dockerfile  README.md
crdt-server/src/: config.rs  main.rs  message.rs  redis_manager.rs  redis_manager_patch.rs  room.rs  server.rs  sync_protocol.rs
(+511 files in other folders)
