[package]
name = "zeal-crdt-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json"] }
socketioxide = { version = "0.13", features = ["tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
yrs = "0.18"
lib0 = "0.16"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "json"] }

[dev-dependencies]
tokio-test = "0.4"